se agregan las estrellas y comentarios

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,3 +70,11 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+    - assets/img/alexis.jpg
+
+
+  fonts:
+    - family: lato
+      fonts:
+        - asset: fonts/Lato-Regular.ttf
