--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,12 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
   assets:
     - assets/img/alexis.jpg
+    - assets/img/andrea1.jpeg
+    - assets/img/andrea2.jpeg
+    - assets/img/andrea3.jpeg
+    - assets/img/andrea4.jpeg
+    - assets/img/andrea5.jpeg
+    - assets/img/andrea6.jpeg
 
 
   fonts:
